# scholar-rss

./: .gitignore  README.md  arxiv_fetcher.py  arxiv_summaries.tsv  git_push_to_remote.sh  google_scholar_fetcher.py  main.py  main_scholar.py  package-lock.json  paper_summarizer.py  pdf_summarizer.py  pyproject.toml  qiita_uploader.py  requirements.txt  scholar_paper_fetcher.py  slack_bot.py  test.py  test_serpapi.py  zenn_uploader.py
public/: AI_use_in_American_newspapers_is_widespread_uneven.md  A_Comprehensive_Review_on_Understanding_the_Decent.md  A_Perspective_on_Symbolic_Machine_Learning_in_Phys.md  A_Research_Roadmap_for_Augmenting_Software_Enginee.md  A_Visualization_Framework_for_Exploring_Multi-Agen.md  A_critical_field_guide_for_working_with_machine_le.md  A_study_on_malicious_browser_extensions_in_2025.md  A_survey_of_multimodal_ophthalmic_diagnostics_From.md  A_survey_on_llm-as-a-judge.md  A_systematic_literature_review_of_parameter-effici.md  Agentic_Software_Engineering_Foundational_Pillars.md  Agibot_world_colosseo_A_large-scale_manipulation_p.md  An_introduction_to_doubledebiased_machine_learning.md  Autocomp_LLM-Driven_Code_Optimization_for_Tensor_A.md  Benchmarking_AI_Models_in_Software_Engineering_A_R.md  Beyond_Next_Word_Prediction_Developing_Comprehensi.md  Beyond_the_Hype_Critical_Analysis_of_Student_Motiv.md  BiasGuard_guardrailing_fairness_in_machine_learnin.md  Code_with_Me_or_for_Me_How_Increasing_AI_Automatio.md  Code_with_me_or_for_me_how_increasing_ai_automatio.md  CogVideoX_Text-to-Video_Diffusion_Models_with_An_E_2408.06072.md  (+63 more)
(+5 files in other folders)
