[project]
name = "scholar-rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "openai>=1.0.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.0",
    "ipdb>=0.13.13",
    "arxiv>=2.2.0",
    "slack-bolt>=1.23.0",
    "serpapi>=0.1.5",
    "google-search-results>=2.4.2",
    "pypdf2>=3.0.1",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.3",
]
